Tools: Make SPM backend a user configuration
The backend is decided by the number of SFN/IPC Partitions in building.
But sometimes the build system needs to know the backend in advance.
For example, the build system enables different test Partitions for
different backends. And The IPC backend will support both IPC and SFN
Partitions in the future.

This patch makes the SPM backend a user configuration.
The default backend is IPC backend.

To use the SFN backend, users need to enable it manually.
The build system will check if it can be enabled as it can be enabled
only in specific configuration combinations.

Change-Id: I4a08ee19d466778fac2cebef4a3c63fc99e7b258
Signed-off-by: Kevin Peng <kevin.peng@arm.com>

--- a/tools/CMakeLists.txt
+++ b/tools/CMakeLists.txt
@@ -134,6 +134,7 @@ add_custom_command(OUTPUT ${OUTPUT_FILES}
                                   -m ${COMBINED_LIST}
                                   -f ${GENERATED_FILE_LISTS}
                                   -l ${TFM_ISOLATION_LEVEL}
+                                  -b ${CONFIG_TFM_SPM_BACKEND}
                                   -o ${CMAKE_BINARY_DIR}/generated
                                   ${PARSE_MANIFEST_QUIET_FLAG}
     DEPENDS ${TEMPLATE_FILES} ${MANIFEST_FILES}
@@ -148,6 +149,7 @@ execute_process(
                                   -m ${COMBINED_LIST}
                                   -f ${GENERATED_FILE_LISTS}
                                   -l ${TFM_ISOLATION_LEVEL}
+                                  -b ${CONFIG_TFM_SPM_BACKEND}
                                   -o ${CMAKE_BINARY_DIR}/generated
                                   ${PARSE_MANIFEST_QUIET_FLAG}
     RESULT_VARIABLE RET
