Build: Fix configurations of build log quietly
Change-Id: Ieb765d457250da66f5c5144b0bf1cbbad4dc32b7
Signed-off-by: Kevin Peng <kevin.peng@arm.com>

--- a/tools/CMakeLists.txt
+++ b/tools/CMakeLists.txt
@@ -123,7 +123,7 @@ add_custom_target(tfm_generated_files
     SOURCES ${OUTPUT_FILES}
 )
 
-if (PARSE_MANIFEST_QUIET)
+if (CONFIG_TFM_PARSE_MANIFEST_QUIET)
     set(PARSE_MANIFEST_QUIET_FLAG "-q")
 else()
     set(PARSE_MANIFEST_QUIET_FLAG "")
