SPM: Add SFN Partition support in IPC backend
In the IPC backend, the SFN Partitions are treated as if they were
IPC Partitions.

The execution model of SFN Partitions are very similiar to IPC ones.
They have a common thread loop to wait for signals and callback
the corresponding SFNs.

This patch:
- Makes member 'sfn' always available in the service load info.
- Assigns signals to SFN Partition in load info
- Adds metadata processing for SFN Partitions in IPC backend
- Adds a common thread function for SFN Partitions

Change-Id: I926f614ca6fbc7ab92afa51392743ccd5f7dc755
Signed-off-by: Kevin Peng <kevin.peng@arm.com>

--- a/secure_fw/partitions/lib/sprt/CMakeLists.txt
+++ b/secure_fw/partitions/lib/sprt/CMakeLists.txt
@@ -25,6 +25,7 @@ target_sources(tfm_sprt
         ./service_api.c
         $<$<BOOL:${CONFIG_TFM_PARTITION_META}>:./sprt_partition_metadata_indicator.c>
         $<$<BOOL:${CONFIG_TFM_PARTITION_META}>:./sprt_main.c>
+        $<$<BOOL:${CONFIG_TFM_SPM_BACKEND_IPC}>:./sfn_common_thread.c>
 )
 
 target_link_libraries(tfm_sprt
