--- a/tools/templates/partition_load_info.template
+++ b/tools/templates/partition_load_info.template
@@ -150,15 +150,23 @@ const struct partition_{{manifest.name|lower}}_load_info_t {{manifest.name|lower
     },
 {% endif %}
 {% if counter.service_counter > 0 %}
+    {% set service_signal = namespace(bit=0) %}
     .services = {
     {% for service in manifest.services %}
         {
             .name_strid             = STRING_PTR_TO_STRID("{{service.name}}"),
-{% if manifest.psa_framework_version == 1.1 and manifest.model == "SFN" %}
+        {% if manifest.psa_framework_version == 1.1 and manifest.model == "SFN" %}
             .sfn                    = ENTRY_TO_POSITION({{service.name|lower}}_sfn),
-{% else %}
+        {% else %}
+            .sfn                    = 0,
+        {% endif %}
+#if CONFIG_TFM_SPM_BACKEND_IPC == 1
+        {% if manifest.psa_framework_version == 1.1 and manifest.model == "SFN" %}
+            .signal                 = (1U << {{"%d"|format(service_signal.bit)}}),
+        {% else %}
             .signal                 = {{service.name}}_SIGNAL,
-{% endif %}
+        {% endif %}
+#endif /* CONFIG_TFM_SPM_BACKEND_IPC == 1 */
             .sid                    = {{service.sid}},
             .flags                  = 0
         {% if service.non_secure_clients is sameas true %}
@@ -181,8 +189,12 @@ const struct partition_{{manifest.name|lower}}_load_info_t {{manifest.name|lower
             .version                = 1,
         {% endif %}
         },
+        {% set service_signal.bit = service_signal.bit + 1 %}
     {% endfor %}
     },
+    {% if service_signal.bit > 32 %}
+#error "Too many services!"
+    {% endif %}
 {% endif %}
 #if TFM_LVL == 3
     .assets                         = {
