Build: Enable idle partition only in IPC backend
Idle partition is for IRQ, and SFN backend does not support IRQ
currently. Enable the idle partition only in IPC backend.

Signed-off-by: Mingyang Sun <mingyang.sun@arm.com>
Change-Id: I13fec4231e3f3a6057df4875c6f1c6195da57241

--- a/secure_fw/CMakeLists.txt
+++ b/secure_fw/CMakeLists.txt
@@ -31,7 +31,10 @@ add_subdirectory(partitions/psa_proxy)
 add_subdirectory(partitions/firmware_update)
 add_subdirectory(partitions/ns_agent_tz)
 add_subdirectory(partitions/ns_agent_mailbox)
-add_subdirectory(partitions/idle_partition)
+if (CONFIG_TFM_SPM_BACKEND_IPC)
+    add_subdirectory(partitions/idle_partition)
+endif()
+
 if (TFM_EXTRA_PARTITION_PATHS)
     set(POSTFIX 1)
 
