SPM: Add partition metadata support in isolation level 3
Add partition metadata support in isolation level 3.

Change-Id: I7acebe45100d1d55787b12ea2b9e9d70a4d87ca1
Signed-off-by: Summer Qin <summer.qin@arm.com>

--- a/platform/ext/common/armclang/tfm_isolation_l3.sct.template
+++ b/platform/ext/common/armclang/tfm_isolation_l3.sct.template
@@ -216,6 +216,12 @@ LR_CODE S_CODE_START S_CODE_SIZE {
     {% endif %}
 {% endfor %}
 
+#if defined(CONFIG_TFM_PARTITION_META)
+    TFM_SP_META_PTR +0 ALIGN 32 {
+        *(.bss.SP_META_PTR_SPRTL_INST)
+    }
+#endif
+
     PT_SRAM_WATERMARK +0 EMPTY 0x0 {
         /* Position tag */
     }
