Build: Add configuration for doorbell APIs
The doorbell APIs are not widely used.
This patch adds a build configuration for them to save memory by
disabling the APIs.

Corresponding changes are made as well:
1. SFN_BACKEND does not support doorbell - it does not provide the
   doorbell APIs, so the config should be disabled by default.
2. The psa_wait in SFN backend can be removed as well since neither
   of the API consumer, interrupt or doorbell is enabled.

Change-Id: I7c367dc0724f915ec2932b6c29db54bdfac06fa3
Signed-off-by: Kevin Peng <kevin.peng@arm.com>

--- a/secure_fw/spm/CMakeLists.txt
+++ b/secure_fw/spm/CMakeLists.txt
@@ -95,6 +95,7 @@ target_compile_definitions(tfm_spm
         # CONFIG_TFM_FP
         $<$<STREQUAL:${CONFIG_TFM_FP},hard>:CONFIG_TFM_FP=2>
         $<$<STREQUAL:${CONFIG_TFM_FP},soft>:CONFIG_TFM_FP=0>
+        $<$<BOOL:${CONFIG_TFM_DOORBELL_API}>:CONFIG_TFM_DOORBELL_API=1>
 )
 
 target_compile_options(tfm_spm
