--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,7 +7,7 @@
 
 cmake_minimum_required(VERSION 3.15)
 
-include(version.cmake)
+include(cmake/version.cmake)
 
 ############################ CONFIGURATION #####################################
 
