SPM: Introduce option for halting instead of rebooting on panic
Introduce the option to halt instead of reboot to retain the backtrace
that triggered the fault and thereby make it easier to debug.

In addition to retaining the backtrace it is also easier to debug a
program that has halted than one that infinitely reboots.

Also, introduce tfm_hal_system_halt() to allow platform specific
behaviour when halting the system.

Change-Id: I965bf90c6b47bfff1a52ffbf66ca24d567456801
Signed-off-by: Sebastian Bøe <sebastian.boe@nordicsemi.no>

--- a/secure_fw/spm/CMakeLists.txt
+++ b/secure_fw/spm/CMakeLists.txt
@@ -95,6 +95,7 @@ target_compile_definitions(tfm_spm
     PRIVATE
         $<$<CONFIG:Debug>:TFM_CORE_DEBUG>
         $<$<AND:$<BOOL:${BL2}>,$<BOOL:${MCUBOOT_MEASURED_BOOT}>>:BOOT_DATA_AVAILABLE>
+        $<$<BOOL:${CONFIG_TFM_HALT_ON_CORE_PANIC}>:CONFIG_TFM_HALT_ON_CORE_PANIC>
         $<$<BOOL:${TFM_NS_MANAGE_NSID}>:TFM_NS_MANAGE_NSID>
         $<$<BOOL:${TFM_PSA_API}>:CONFIG_TFM_CONN_HANDLE_MAX_NUM=${CONFIG_TFM_CONN_HANDLE_MAX_NUM}>
         # CONFIG_TFM_FP
