Build: Add CONFIG_TFM_DOORBELL_API to psa_interface
This patch fixes the psa-arch-tests building issue.

Change-Id: I935912a02026e5da561509f27e97ef9b3fdf9393
Signed-off-by: Kevin Peng <kevin.peng@arm.com>

--- a/interface/CMakeLists.txt
+++ b/interface/CMakeLists.txt
@@ -52,6 +52,7 @@ target_compile_definitions(psa_interface
         $<$<BOOL:${TFM_MULTI_CORE_TOPOLOGY}>:TFM_MULTI_CORE_TOPOLOGY>
         $<$<BOOL:${FORWARD_PROT_MSG}>:FORWARD_PROT_MSG=${FORWARD_PROT_MSG}>
         $<$<BOOL:${CONFIG_TFM_PARTITION_META}>:CONFIG_TFM_PARTITION_META>
+        $<$<BOOL:${CONFIG_TFM_DOORBELL_API}>:CONFIG_TFM_DOORBELL_API=1>
 )
 
 ###################### PSA api (S lib) #########################################
