Tools: Add verifier for HardwareVersionClaim
Change-Id: Ib1263afdbd1f126fbf086a2fc1b76ed9de498515
Signed-off-by: Mate Toth-Pal <mate.toth-pal@arm.com>

--- a/tools/iat-verifier/tests/data/invalid-hw-version.yaml
+++ b/tools/iat-verifier/tests/data/invalid-hw-version.yaml
@@ -9,7 +9,7 @@ instance_id: !!binary AQcGBQQDAgEADw4NDAsKCQgXFhUUExIREB8eHRwbGhkY
 implementation_id: !!binary BwYFBAMCAQAPDg0MCwoJCBcWFRQTEhEQHx4dHBsaGRg=
 challenge: !!binary BwYFBAMCAQAPDg0MCwoJCBcWFRQTEhEQHx4dHBsaGRg=
 client_id: 2
-hardware_version: '1234567890123'
+hardware_version: ' 23-56789a'
 security_lifecycle: sl_secured
 profile_id: http://example.com
 boot_seed: !!binary BwYFBAMCAQAPDg0MCwoJCBcWFRQTEhEQHx4dHBsaGRg=
