Build: Refine tfm_secure_api dependency routine
tfm_secure_api library links tfm_partitions and then is linked by
all secure partitions which are linked by tfm_partitions. It's a
cyclic dependency and this patch refined it with tfm_spm_defs library.

tfm_spm_defs is required by both tfm_secure_api and tfm_partitons.
As it is unnecessary to make tfm_secure_api depend on tfm_partitons,
include directories required by both tfm_partitions's sources
and secure partitons' sources can be moved into tfm_spm_defs.

tfm_arch is linked by tfm_secure_api and it is unnecessary to link
it when tfm_seure_api is already linked.

Signed-off-by: Jianliang Shen <jianliang.shen@arm.com>
Change-Id: I6f546a8c03640ad93cdeda637853785438a00356

--- a/secure_fw/CMakeLists.txt
+++ b/secure_fw/CMakeLists.txt
@@ -33,6 +33,7 @@ target_link_libraries(tfm_s
         platform_s
         psa_interface
         tfm_sprt
+        tfm_secure_api
 )
 
 set_target_properties(tfm_s
