SPM: Remove SFN model partition stack in level 1
In isolation level 1, the stack of partition in SFN model
is not used.

Signed-off-by: Sherry Zhang <sherry.zhang2@arm.com>
Change-Id: Id3f1f3f4de043b24b006cde12f0712b4acc51452

--- a/tools/templates/partition_intermedia.template
+++ b/tools/templates/partition_intermedia.template
@@ -9,4 +9,6 @@
 
 #include <stdint.h>
 
+{% if config_impl['CONFIG_TFM_SPM_BACKEND_IPC'] == '1' or manifest.model == "IPC" %}
 uint8_t {{manifest.name.lower()}}_stack[{{manifest.stack_size}}] __attribute__((aligned(8)));
+{% endif %}
