Attest: Add MM-IOVEC support for buffers
Change-Id: I73107c99ecd5fd3ddf8dd47daa14a85972d4fb69
Signed-off-by: Kevin Peng <kevin.peng@arm.com>

--- a/secure_fw/partitions/initial_attestation/tfm_initial_attestation.yaml
+++ b/secure_fw/partitions/initial_attestation/tfm_initial_attestation.yaml
@@ -39,7 +39,8 @@
       "connection_based": false,
       "stateless_handle": 4,
       "version": 1,
-      "version_policy": "STRICT"
+      "version_policy": "STRICT",
+      "mm_iovec": "enable",
     }
   ],
   "dependencies": [
