Build: Add option to set NS Evaluation App path
This commit adds the option to leverage TF-M build system for simple
evaluation projects. It allows to set an out-of-tree NS application.

Change-Id: Iee6fd1a7561d332e21b06dd9d38d7382840da787
Signed-off-by: Gabor Abonyi <gabor.abonyi@arm.com>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -80,7 +80,9 @@ add_subdirectory(lib/fih)
 add_subdirectory(tools)
 add_subdirectory(secure_fw)
 
-if(NS OR TFM_S_REG_TEST OR TFM_NS_REG_TEST OR TEST_BL2 OR TEST_BL1_1 OR TEST_BL1_2)
+if(NS AND NS_EVALUATION_APP_PATH)
+    add_subdirectory(${NS_EVALUATION_APP_PATH} ${CMAKE_CURRENT_BINARY_DIR}/evaluation-app)
+elseif(NS OR TFM_S_REG_TEST OR TFM_NS_REG_TEST OR TEST_BL2 OR TEST_BL1_1 OR TEST_BL1_2)
     add_subdirectory(${TFM_TEST_REPO_PATH} ${CMAKE_CURRENT_BINARY_DIR}/tf-m-tests)
 endif()
 
